# VisPage

./: .gitignore  DATA.md  MANIFEST.md  README.md  VLLM.md
scripts/: run_smoke.sh  (+2 more)
vispage/: pyproject.toml
vispage/configs/: build_embeddings_qwen3_embed_4b_eventqa.json  build_embeddings_qwen3_embed_4b_locomo.json  build_embeddings_qwen3_embed_4b_perma.json  build_embeddings_template.json
vispage/configs/exp1_32b_server_ttft_quick/: README.md  eventqa_8011.list  eventqa_baseline_8011.json  eventqa_semantic_8011.json  locomo_8010.list  locomo_baseline_8010.json  locomo_semantic_8010.json  perma_8012.list  perma_baseline_8012.json  perma_semantic_8012.json
vispage/configs/exp1_8b_server_ttft_quick/: README.md  eventqa_8001.list  eventqa_baseline_8001.json  eventqa_semantic_8001.json  locomo_8000.list  locomo_baseline_8000.json  locomo_random_8013.json  locomo_random_8013.list  locomo_semantic_8000.json  perma_8002.list  perma_baseline_8002.json  perma_semantic_8002.json
vispage/configs/sensitivity_8b_locomo_quick/: README.md  amp2_8020.json  amp3_8020.json  amp7_8020.json  amp_8020.list  cache_util0p6_8021.json  cache_util0p6_8021.list
vispage/dataset/: README.md  build_embeddings.py  common.py
vispage/dataset/evaluation/: README.md  profile_locality.py
vispage/docs/: architecture.md
vispage/evaluation/: microbench_async_chunk.py
vispage/experiments/: run_exp1_end_to_end.py  run_exp2_locality.py  run_exp3_cache_lifecycle.py  run_exp4_scheduler.py  run_system.py
vispage/tests/: test_renderer.py  test_retrieval.py  test_trace_logger.py  test_validation.py
(+760 files in other folders)
